@@ -7,16 +7,15 @@ import com.google.common.collect.Lists;
 import net.minecraft.block.Block;
 import net.minecraft.item.ItemColored;
 
-import com.hea3ven.dulcedeleche.industry.block.BlockMetalOre;
 import com.hea3ven.dulcedeleche.industry.metal.Metal;
 
-public class ItemMetalOre extends ItemColored {
+public class ItemMetalBlock extends ItemColored {
 
-	public ItemMetalOre(Block block) {
+	public ItemMetalBlock(Block block, Metal[] metals) {
 		super(block, true);
 
 		List<String> names = Lists.newArrayList();
-		for (Metal metal : BlockMetalOre.ORES) {
+		for (Metal metal : metals) {
 			names.add(metal.getName());
 		}
 		setSubtypeNames(names.toArray(new String[names.size()]));
