@@ -1,7 +1,30 @@
 {
-    "parent": "dulcedeleche:block/cube_overlay",
     "textures": {
         "all": "blocks/stone",
         "overlay": "dulcedeleche:blocks/ore_overlay"
-    }
+    },
+    "elements": [
+        {   "from": [ 0, 0, 0 ],
+            "to": [ 16, 16, 16 ],
+            "faces": {
+                "down":  { "texture": "#all", "cullface": "down" },
+                "up":    { "texture": "#all", "cullface": "up" },
+                "north": { "texture": "#all", "cullface": "north" },
+                "south": { "texture": "#all", "cullface": "south" },
+                "west":  { "texture": "#all", "cullface": "west" },
+                "east":  { "texture": "#all", "cullface": "east" }
+            }
+        },
+        {   "from": [ 0, 0, 0 ],
+            "to": [ 16, 16, 16 ],
+            "faces": {
+                "down":  { "texture": "#overlay", "cullface": "down", "tintindex": 0 },
+                "up":    { "texture": "#overlay", "cullface": "up", "tintindex": 0 },
+                "north": { "texture": "#overlay", "cullface": "north", "tintindex": 0 },
+                "south": { "texture": "#overlay", "cullface": "south", "tintindex": 0 },
+                "west":  { "texture": "#overlay", "cullface": "west", "tintindex": 0 },
+                "east":  { "texture": "#overlay", "cullface": "east", "tintindex": 0 }
+            }
+        }
+    ]
 }
