@@ -3,3 +3,4 @@
     * Add copper and tin ore.
     * Add copper and tin ingots.
     * Add copper, tin and iron nuggets.
+    * Add copper and tin blocks.
